# Ferrite

./: README.md
compiler/: Cargo.toml
compiler/src/: api_dump.rs  codegen.rs  config.rs  ir.rs  lib.rs  main.rs  minifier.rs  optimizer.rs  parser.rs  tree_shaker.rs
compiler/tests/: test_config_flags.rs
ferrite/: Cargo.toml
ferrite-macros/: Cargo.toml
ferrite-macros/src/: lib.rs
ferrite/runtime/components/: Accessible.luau  Animated.luau  AnimatedCard.luau  AnimationDemo.luau  BadCodeApp.luau  Button.luau  Card.luau  CardGrid.luau  Consumer.luau  Counter.luau  CounterApp.luau  Dashboard.luau  ErrorBoundary.luau  ErrorHandler.luau  Flex.luau  Form.luau  FormField.luau  Grid.luau  I18nProvider.luau  Input.luau  Lazy.luau  Link.luau  LoginForm.luau  Modal.luau  ModalDialog.luau  Portal.luau  ProgressBar.luau  Provider.luau  Redundant.luau  Responsive.luau  Route.luau  Router.luau  SettingsPanel.luau  SimpleButton.luau  Spinner.luau  Stack.luau  (+7 more)
ferrite/src/: accessibility.rs  animated_card.rs  animation_demo.rs  animations.rs  bad_code_app.rs  components.rs  context.rs  counter.rs  counter_app.rs  dashboard.rs  data_fetching.rs  error_boundary.rs  error_handler.rs  examples.rs  forms.rs  i18n.rs  layout.rs  lazy.rs  lib.rs  login_form.rs  persistence.rs  portal.rs  redundant.rs  responsive.rs  router.rs  settings_panel.rs  suspense.rs  test_guis.rs  test_simple.rs  theme.rs  todo_app.rs
runtime/: Accessibility.luau  Animation.luau  Animations.luau  Context.luau  DataFetching.luau  DevTools.luau  ErrorHandler.luau  Forms.luau  HMR.luau  default.project.json
