[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
notify = "6.1"
